--- a/index.html
+++ b/index.html
@@ -1,36 +1,34 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0 , user-scalable=no">
-    <title>Document</title>
-    <link rel="stylesheet" href="style-exe-function.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0 , user-scalable=no"
+    />
+    <title>Calculo simples</title>
+    <link rel="stylesheet" href="style-exe-function.css" />
+  </head>
+  <body>
     <header>
-        <h1>
-            Média 2.0
-        </h1>
+      <h1>Média 2.0</h1>
     </header>
     <section class="container">
-    <div class="number">
-        Valores: 
-        <input type="number" name="fnum" id="fnum" placeholder="<=1000">
-        <input type="button" value="Adicionar" onclick="adicionar()">
-        <br><select name="flista" id="flista" size="6"></select>
-        
-    </div>
-    <div class="botao">
-        <input type="button" value="Finalizar" onclick="finalizar()">
-    </div>
-    <div id="res">
-      
-    </div>
-</section>
-<footer>
-    <p>&copy;Leoodaviid</p>
-</footer>
+      <div class="number">
+        Valores:
+        <input type="number" name="fnum" id="fnum" placeholder="<=1000" />
+        <input type="button" value="Adicionar" onclick="adicionar()" />
+        <br /><select name="flista" id="flista" size="6"></select>
+      </div>
+      <div class="botao">
+        <input type="button" value="Finalizar" onclick="finalizar()" />
+      </div>
+      <div id="res"></div>
+    </section>
+    <footer>
+      <p>&copy;Leoodaviid</p>
+    </footer>
     <script src="ex-function.js"></script>
-</body>
+  </body>
 </html>
